tests/error/py_errors/guppy_name2.err
Error: Not compile-time evaluatable (at $FILE:9:14)
  | 
7 | @compile_guppy
8 | def foo(x: int) -> int:
9 |     return py(x + 1)
  |               ^ Guppy variable `x` cannot be accessed in a compile-time
  |                 `py(...)` expression

Guppy compilation failed due to 1 previous error
